# AxEqB

./: .gitignore  CMakeLists.txt  README.md  graphic.ipynb  main.cpp
include/: bicgstab.h
src/: bicgstab.cpp
tests/: CMakeLists.txt  tests.cpp
